[package]
name = "wipf"
version = "0.1.0"
authors = ["0rphon <59403052+0rphon@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
reqwest = {version = "0.10.7", features=["blocking"]}
select = "0.5.0"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
percent-encoding = "2.1.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]

#rustup override set nightly
#wsl needs: 
#   export RUSTUP_IO_THREADS=1
#   uncomment openssl